Build Beta 5.4 June 9, 2011
* Fix bug with screen buffer clearing randomly
* Fix and finalize the Simple Script Plugin


Build Beta 5.3 June 7, 2011
* Fix bug with screen clearing when buffer got full
* Remove 'unload plugin' from Plugins, and allow to load a plugin from menu


Build Beta 5.2 May 25, 2011
* Added setting for maximum number of text lines
* Changes to Plugins to allow tabs to be added to Editor



Build Beta 5.1  April 30, 2011
* Added DCC File changes submitted
* Fixed issue with Server Errors showing in all windows, not in proper places
* Added /closequery and /closeallquery for closing all Query Windows for current server or all
* Added a Mute All Sounds item to the Options Menu to disable playing any sounds
* Added $+ identifier for joining 2 words together
* Added option to Minimize to Tray
* Added if IceChat is closed on Tray, it will restart on Tray
* Added basic word wrapping



Build Beta 5 February 26 2011
* Fix bug crash while attempting to connect with SSL to an NON-SSL Server Port
* Fix bug with popup menus running a blank command
* Fix problem with connecting servers not being properly selected from Server Tree
* Fix nicklist buttons causing crash when clicked in the Console
* Fix /kick command now works if you dont specify a channel, uses current channel
* Fix irc:// links with channel specified now properly joins the channel
* Fix UserInfo and Channel Info windows now have text areas stretch with window resizing
* Remove extra messages from server timeouts and disconnects
* On a server error, sends the message to the console and now all open channels
* Using /server with + port (for SSL) enables the Accept Invalid SSL Certifiates option


Build Beta 4.1 February 17 2011
* Adding a new buddy with /buddylist now should update the BuddyList much quicker
* Automatically detect Unicode Text, no need to select Server Encoding
* Using the nicklist buttons with selected nicks, now fixed